--- a/dataproject/dataproject.ipynb
+++ b/dataproject/dataproject.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a lot of support in the danish educational system such as the State Educational Fund (SU) and generally free education. This leads us to believe that danish people have equal opportunities to study - and maybe even to complete an education. \n",
+    "We see a lot of support in the danish educational system such as the State Educational Fund (SU) and generally free education. This leads us to believe that danish people have equal opportunities to study - and maybe even to complete an education. \n",
     "\n",
     "In this project we want to analyse whether or not parents level of education affects their childrens chances of completing their studies. If it is true that people in Denmark all have the same opportunities we expect the individuals level of education to be unaffected by their parents' level of education. "
    ]
